@@ -1,3 +1,8 @@
+Sun Aug 13 15:02:40 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/odbc.c src/odbc/unittests/data.c:
+	* src/odbc/unittests/transaction.c:
+	- fix minor issues with 64-bit machines
+
 Thu Aug 10 10:10:30 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/ctlib/ct.c: fix possible buffer overflow
 	* src/replacements/gettimeofday.c: add comment
